feat: public deployment application
